--- a/GitHubPullRequests/GitHubPullRequests.csproj
+++ b/GitHubPullRequests/GitHubPullRequests.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentOptions.cs" />
     <Compile Include="GitHub.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
