--- a/GitHubPullRequests/App.config
+++ b/GitHubPullRequests/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GitHubPullRequests.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <GitHubPullRequests.AppSettings>
+            <setting name="GitHubRepo" serializeAs="String">
+                <value>sample/sample</value>
+            </setting>
+            <setting name="ApiRoot" serializeAs="String">
+                <value>https://api.github.com/repos/</value>
+            </setting>
+            <setting name="Token" serializeAs="String">
+                <value>123456</value>
+            </setting>
+            <setting name="MasterBranch" serializeAs="String">
+                <value>master</value>
+            </setting>
+        </GitHubPullRequests.AppSettings>
+    </applicationSettings>
 </configuration>
