--- a/GitHubPullRequests/GitHubPullRequests.csproj
+++ b/GitHubPullRequests/GitHubPullRequests.csproj
@@ -53,12 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppSettings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>AppSettings.settings</DependentUpon>
-    </Compile>
     <Compile Include="ArgumentOptions.cs" />
+    <Compile Include="Git.cs" />
     <Compile Include="GitHub.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
@@ -66,10 +62,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="AppSettings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>AppSettings.Designer.cs</LastGenOutput>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
